<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/main_spinner"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        />
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:layout_weight="0.5"
            android:gravity="left"
            android:text="@string/current_date"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/current_date_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="19sp" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:gravity="left"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:text="@string/morning_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/morning_temp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:layout_column="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:gravity="left"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:text="@string/day_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/day_temp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:layout_column="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:gravity="left"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:text="@string/evening_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/evening_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="19sp" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:gravity="left"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:text="@string/night_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/night_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="19sp" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:gravity="left"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:text="@string/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/pressure_s"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:gravity="left"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:text="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/humidity_s"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:gravity="left"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:text="@string/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/wind_speed_s"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="0.5"
            android:gravity="left"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:text="@string/clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/clouds_s"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_margin="11dp"
            android:textSize="19sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow
        android:gravity="center">
        <Button
            android:text="@string/load"
            android:onClick="loadButtonClick"
            android:layout_margin="6dp"
            android:layout_span="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />
    </TableRow>
</TableLayout>